tests/regression/errors/basic/import_error_23.csd
// Import error test 23
yeet "nonexistent_module_23"
sus result drip = some_function(23)
